# lux-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backtest/: engine.py  events.py  lifecycle.py  risk.py  signals.py  stats.py  strategy.py
brain/: README.md  agents-v1.md  geopolitics-v1.md  glm-regime-confluence-v1.md  glossary.md  lessons.md  timeline.md  tsmom-liq-v1.md
dashboard/: backtest.html  data.js  decisioni.html  eventi.html  evoluzione.html  index.html  lezioni.html  llm.html  portafogli.html  posizioni.html  rischio.html  strategie.html  template.html  trading-book.html
docs/: TODO-sizing-clamp.md  worker-xsection-trigger.md
paper/: backtests.json  decisions.jsonl  journal.jsonl  lessons.jsonl  lifecycle.jsonl  state.json
pipeline/: executor.py  gdelt.py  live.py
prompts/: roles.yaml
scripts/: agents_paper.py  backfill_lost_positions.py  backtest_factor_zoo.py  backtest_portfolio_factors.py  backtest_report.py  claude_strategy.py  close_positions.py  collect_hl_snapshot.py  cron_run.sh  dashboard.py  decide.py  eval_specs.py  event_study.py  evolve.py  evolve_auto.py  execute_testnet.py  fetch_coinalyze.py  fetch_gdelt.py  geopolitics_paper.py  glm_strategy.py  llm.py  llm_stats.py  paper_all.py  paper_exits.py  paper_trade.py  portfolio_all.py  portfolio_paper.py  precompute_hmm.py  precompute_kronos.py  promote.py  prompts.py  research_er.py  research_nw.py  research_pivot.py  research_seeds.py  review.py  robustness_liq.py  robustness_portfolio.py  run_strategy.py
strategies/: FORMAT.md  funding-squeeze-breakout-v1.yaml  tsmom-v1.yaml  (+1 more)
(+53 files in other folders)
