[project]
name = "defi-ai-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "hyperliquid-python-sdk>=0.24.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]
